css/mainStyle.css
body {
    background-color: #121212;
    color: #D9D9D9;
    overflow-x: hidden !important; /*Fix for AOS horizontal overflows on from left/right entries*/
}

nav {
}

.nav-link, .nav-link:hover {
    color: white;
}

.nav-link:hover {
    color: #3e77aa !important;
}

.secondary {
    color: #404040 !important;
}

h1,h2,h3,h4 {
    color: #D9D9D9;
}

h2 {
    color: #595959;
}

p {
    color: #D9D9D9;
}

h4 {
    color: #262626;
}

a,a:active,a:hover {
    color: #D9D9D9;
}

hr {
    border: none;
    border-top: 3px double #333;
    color: #333;
    overflow: visible;
    text-align: center;
    height: 5px;
    width: 100%;
}

.hero {
    width: 100%;
    height: 100vh;
    position: relative;
    overflow: hidden;
    color: #FFF;
    text-align: center;
}

.hero-center {
    width: 100%;
    position: absolute;
    top: 45%;
    left: 0;
    -webkit-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    transform: translate(0, -50%);
}

.hero-bottom {
    width: 100%;
    position: absolute;
    bottom: 5%; /*distance from bottom*/
    cursor: pointer;
    left: 0; /*not sure why, but doesnt work without this, MDN ex's have a left!right as well*/
    padding: 10% 10% 0;
}

html {
    scroll-behavior: smooth;
}

.card {
    position: relative;
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: rgba(33, 37, 41, 0.27);
    background-clip: border-box;
    border: 1px solid hsl(208, 47%, 45%);
    border-radius: 0.25rem;
}

.card-header {
    background-color: rgba(0, 0, 0, 0.03);
    border-bottom: 1px solid rgb(62, 119, 170);
}

.navbar {
    opacity: 1;
    transition: opacity 0.5s ease;
}

.navbar-hide {
    pointer-events: none;
    opacity: 0;
}

#socials,#resume {
    font-size: x-large;
}

footer {
    background-color: #161718;
}

.footer-header {
    color: #3e77aa;
}

.btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:hover + .btn-primary:focus {
    background-color: #161718;
    border-color: #3e77aa;
}

.btn-check:focus + .btn-primary, .btn-primary:focus, .btn-primary:active:focus {
    color: #fff;
    background-color: #595959;
    border-color: #595959;
    box-shadow: 0 0 0 0.2rem rgba(101, 101, 101, 0.5);
}

.card-no-border {
    border-color: transparent;
}

.card-add-border {
    border: #3e77aa 1px solid;
    border-top: transparent;
    box-shadow: 0 0 10px #3e77aa;
}

.modal-content {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    pointer-events: auto;
    background-color: #121212;
    background-clip: padding-box;
    border: 1px solid #3e77aa;
    border-radius: 0.3rem;
    outline: 0;
    box-shadow: 0 0 5px #3e77aa;
}

.modal-header {
    display: flex;
    flex-shrink: 0;
    align-items: flex-start;
    justify-content: space-between;
    padding: 1rem 1rem;
    border-bottom: 1px solid #3e77aa;
    border-top-left-radius: calc(0.3rem - 1px);
    border-top-right-radius: calc(0.3rem - 1px);
}

.modal-footer {
    display: flex;
    flex-wrap: wrap;
    flex-shrink: 0;
    align-items: center;
    justify-content: flex-end;
    padding: 0.75rem;
    border-top: 1px solid #333;
    border-bottom-right-radius: calc(0.3rem - 1px);
    border-bottom-left-radius: calc(0.3rem - 1px);
}

.close,.close:hover {
    color: white;
}

/*Remove left sidebar when under 767px*/
@media only screen and (max-width: 768px) {
    #head-shot-col {
        display: none;
    }
}

@media (min-width: 768px) {
    .modifiedBootstrap__my-lg-6 {
        margin-top: 10rem !important;
        margin-bottom: 10rem !important;
    }

    hr {
        margin-top: 10rem !important;
        margin-bottom: 10rem !important;
    }
}

.no-style {
    text-decoration: none;
}

.card {
    padding-left: 0;
    padding-right: 0;
    box-shadow: 0 0 4px #3e77aa;
    border-color: #3e77aa;
}

.card-footer {
    background-color: transparent;
    border-top: none;
}

/*New Color Stuff*/
.secondary {
    color: rgba(62, 119, 170, 0.84) !important;
}

.text-muted,#subheading,h4,i,h2 {
    color: #3e77aa !important;
}

/*IE Bugs*/
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 .card-img-top {
     max-height: 270px; /*Fixing weird (Bootstrap?) bug, where card images stretch very far down*/
 }
}

.container {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

